--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*/assets/* linguist-vendored
+
 */scss/* linguist-vendored
 */css/* linguist-vendored
-*/font/* linguist-vendored
+*/fonts/* linguist-vendored
