--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 
-*/scss/* linguist-vendored
-*/css/* linguist-vendored
-*/fonts/* linguist-vendored
+scss/* linguist-vendored
+css/* linguist-vendored
+fonts/* linguist-vendored
